<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:id="@+id/repCard"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="3dp"
    >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="95dp"
                android:id="@+id/repPhoto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repName"
                android:layout_toRightOf="@+id/repPhoto"
                android:layout_alignParentTop="true"
                android:textSize="22sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repPos"
                android:layout_toRightOf="@+id/repPhoto"
                android:layout_below="@+id/repName"
                android:textSize="13sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/repParty"
                android:layout_toRightOf="@+id/repPhoto"
                android:layout_below="@+id/repPos"
                android:textSize="13sp"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
