...
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/street"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/street" />
        </LinearLayout>
...
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"/>
        <EditText
            android:id="@+id/zipcode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/zip_code" />
        </LinearLayout>
...
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:id="@+id/rep_btn"
            android:onClick="sendRequestForRepresentatives"
            android:text="@string/find_representatives" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
